--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="main.js" type="module"></script>
+    <fieldset class="up-btn"></div>
+    <button  type="button" id="start"><a href="juego.html">¡Comenzemos!</a></button>
+    
+  </fieldset>>
+
+
+    <script src="index.js" type="module"></script>
   </body>
 </html>
