--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Memory Match</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="portada.css" />
   </head>
   <body>
     <div id="root"></div>
     <fieldset class="up-btn"></div>
     <button  type="button" id="start"><a href="juego.html">¡Comenzemos!</a></button>
     
-  </fieldset>>
+  </fieldset>
 
 
-    <script src="index.js" type="module"></script>
+    <script src="portada.js" type="module"></script>
   </body>
 </html>
