--- a/src/juego.html
+++ b/src/juego.html
@@ -4,7 +4,7 @@
 
   <title>Pixar Memory Match</title>
 
-  <link rel="stylesheet" href="juego.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="root"></div>
@@ -13,47 +13,109 @@
   </audio>
 
   <section class="memory-game">
-    <div class="memory-card" data-movie="">
-      <img class="front-face" src=""  />
+    <div class="memory-card" data-movie="incredibles">
+      <img class="front-face" src="https://wallpaperaccess.com/full/1707395.jpg"  />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
-    <div class="memory-card" data-movie="">
-      <img class="front-face" src=""  />
-      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
-    </div>
-
-    <div class="memory-card" data-movie="">
-      <img class="front-face" src=""  />
-      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
-    </div>
-    <div class="memory-card" data-movie="">
+    <div class="memory-card" data-movie="ratatouille">
       <img class="front-face" src=""  />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
 
-    <div class="memory-card" data-movie="">
+    <div class="memory-card" data-movie="brave">
       <img class="front-face" src=""  />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
-    <div class="memory-card" data-movie="">
+    <div class="memory-card" data-movie="intensamente">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+
+    <div class="memory-card" data-movie="wallie">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+    <div class="memory-card" data-movie="monsteinc">
       <img class="front-face" src="" />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
 
-    <div class="memory-card" data-movie="">
+    <div class="memory-card" data-movie="toystory">
       <img class="front-face" src=""  />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
-    <div class="memory-card" data-movie="">
+    <div class="memory-card" data-movie="up">
       <img class="front-face" src=""  />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
 
-    <div class="memory-card" data-movie="">
+    <div class="memory-card" data-movie="coco">
       <img class="front-face" src=""  />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
-    <div class="memory-card" data-movie="">
+
+    <div class="memory-card" data-movie="luca">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+
+    <div class="memory-card" data-movie="incredibles">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+    <div class="memory-card" data-movie="ratatouille">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+
+    <div class="memory-card" data-movie="brave">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+    <div class="memory-card" data-movie="intensamente">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+
+    <div class="memory-card" data-movie="wallie">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+    <div class="memory-card" data-movie="monsteinc">
+      <img class="front-face" src="" />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+
+    <div class="memory-card" data-movie="toystory">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+    <div class="memory-card" data-movie="up">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+
+    <div class="memory-card" data-movie="coco">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+
+    <div class="memory-card" data-movie="luca">
+      <img class="front-face" src=""  />
+      <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
+    </div>
+
+  </section>
+  <section class="results">
+    <h2 id="points" class="marker">Points :0 </h2>
+    <h2 id="time" class="marker"> Time: 2:00 Min</h2>
+  </section>
+  
+
+  <script src="main.js"></script>
+</body>
+</html>
+    <!--<div class="memory-card" data-movie="">
       <img class="front-face" src="" />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
@@ -65,7 +127,7 @@
     <div class="memory-card" data-movie="">
       <img class="front-face" src=""  />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg" />
-    </div>
+    </div> ––>
   </section>
   <section class="results">
     <h2 id="points" class="marker">Points :0 </h2>
@@ -73,6 +135,6 @@
   </section>
   
 
-  <script src="juego.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
