--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Memory Match</title>
-    <link rel="stylesheet" href="portada.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <fieldset class="up-btn"></div>
-    <button  type="button" id="start"><a href="juego.html">¡Comenzemos!</a></button>
-    
-  </fieldset>
+
+<head>
+  <meta charset="utf-8">
+  <title>Pixar Memory Match</title>
+  <link rel="stylesheet" href="style.css">
+  
+</head>
+
+<body>
+  <audio controls autoplay loop>
+    <source src="audio/toy-story.mp3"  >
+  </audio>
+  <div id="root">
+   
 
 
-    <script src="portada.js" type="module"></script>
-  </body>
+
+  </div>
+
+
+
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
