--- a/src/juego.html
+++ b/src/juego.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!--<html lang="en">
 <head>
   <meta charset="UTF-8">
 
@@ -13,7 +13,7 @@
   </audio>
 
   <section class="memory-game">
-    <div class="memory-card" data-movie="incredibles">
+   <!-- <div class="memory-card" data-movie="incredibles">
       <img class="front-face" src="https://wallpaperaccess.com/full/1707395.jpg"  />
       <img class="back-face" src="https://i.pinimg.com/originals/44/16/6b/44166b9b616568af4cdbee33d2664020.jpg"  />
     </div>
@@ -132,9 +132,9 @@
   <section class="results">
     <h2 id="points" class="marker">Points :0 </h2>
     <h2 id="time" class="marker"> Time: 2:00 Min</h2>
-  </section>
+  </section>-->
   
 
-  <script src="main.js"></script>
+  <!--<script type= "module" src="main.js"></script>
 </body>
 </html>
