--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Memory Match</title>
+    <title>Pixar Memory Match</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
+    <div id="root">
+      <audio controls loop></audio>
+      <iframe src="https://giphy.com/embed/yvya8Yi18YoX66tdCx" width="280" height="135" frameBorder="0" class="sticker" allowFullScreen></iframe><p></p>
+      <h1 class="titulo">Bienvenidos a Memory Match de Pixar</h1>
+        <button id="iniciarJuego" class="jugar">¿Cómo jugar?</button>
+    </div>
+    
+  <script src="main.js" type="module"></script>
   </body>
 </html>
