--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
       <audio controls loop></audio>
       <iframe src="https://giphy.com/embed/yvya8Yi18YoX66tdCx" width="280" height="135" frameBorder="0" class="sticker" allowFullScreen></iframe><p></p>
       <h1 class="titulo">Bienvenidos a Memory Match de Pixar</h1>
-        <button id="iniciarJuego" class="jugar">¿Cómo jugar?</button>
+      <div class="boton">
+        <button class="instrucciones">¿Cómo jugar?</button>
+      </div>
     </div>
     
   <script src="main.js" type="module"></script>
