--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="root">
       <div class="inicio">
-      <audio class="musica" controls autoplay loop src="ToyStory.mp3"></audio>
+      <audio class="musica" controls loop src="ToyStory.mp3"></audio>
       <iframe src="https://giphy.com/embed/yvya8Yi18YoX66tdCx" width="250" height="115" frameBorder="0" class="sticker" allowFullScreen></iframe><p></p>
     </div>
       <div class="boton">
