--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,17 @@
   <body>
     <div id="root">
       <div class="inicio">
-      <audio class="musica" controls loop src="ToyStory.mp3"></audio>
+      <audio class="musica"  controls loop src="ToyStory.mp3"></audio>
       <iframe src="https://giphy.com/embed/yvya8Yi18YoX66tdCx" width="250" height="115" frameBorder="0" class="sticker" allowFullScreen></iframe><p></p>
     </div>
       <div class="boton">
         <button class="instrucciones">¿Cómo jugar?</button>
+        <dialog class="popup" id="popup">
+          <p>El jugador debe darle click a 2 imagenes, si coinciden y tienen la misma imagen, estas quedan con la imagen visible y sigue presionando otras dos. Y si por el contrario no coinciden estas automaticamente vuelven a su posición inicial</p>
+          <button class="boton2">Vamos a jugar</button>
+        </dialog>
       </div>
+     
     </div>
     
   <script src="main.js" type="module"></script>
