contador de intentos

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div id="root">
       <div class="inicio">
       <audio class="musica"  controls loop src="ToyStory.mp3"></audio>
-      <iframe src="https://giphy.com/embed/yvya8Yi18YoX66tdCx" width="250" height="115" frameBorder="0" class="sticker" allowFullScreen></iframe><p></p>
+      <iframe src="https://giphy.com/embed/yvya8Yi18YoX66tdCx" width="250" height="115" frameBorder="0" class="sticker" allowFullScreen></iframe>
     </div>
       <div class="boton">
         <button class="instrucciones">¿Cómo jugar?</button>
@@ -18,7 +18,8 @@
           <button class="boton2">Vamos a jugar</button>
         </dialog>
       </div>
-     
+      <div class="intentos">
+       </div>
     </div>
     
   <script src="main.js" type="module"></script>
