--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <body>
     <div id="root">
       <div class="inicio">
-      <audio class="musica"  controls loop src="ToyStory.mp3"></audio>
+        <h1>Vamos a jugar Memory Match</h1>
+      <audio class="musica"  controls loop src="./audio/ToyStory.mp3"></audio>
       <iframe src="https://giphy.com/embed/yvya8Yi18YoX66tdCx" width="250" height="115" frameBorder="0" class="sticker" allowFullScreen></iframe>
     </div>
       <div class="boton">
