--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container1">
+    <div class="container2">
       <!--Acá comienza lado izquierdo-->
       <div>
         <div class="inicio">
@@ -40,6 +40,32 @@
         </div>
         <div class="intentos"></div>
       </div>
+      <!--Ganaste-->
+      <section id="you-win">
+        <img src="./disneywin.gif" alt="ganaste" />
+        <div class="buttonReplay">
+          <button
+            type="buttom"
+            class="buttonReplay"
+            onclick="location.href='index.html'"
+          >
+            ¡Juega de nuevo!
+          </button>
+        </div>
+      </section>
+      <!--Perdiste-->
+      <section id="you-lose">
+        <img src="./cry.gif" alt="perdiste" />
+        <div class="buttonReplay2">
+          <button
+            type="buttom"
+            class="buttonReplay"
+            onclick="location.href='index.html'"
+          >
+            ¡Juega de nuevo!
+          </button>
+        </div>
+      </section>
 
       <!--Acá termina lado izquierdo-->
       <div id="root"></div>
