--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
           <header class="encabezado"><u></u></header>
           <audio
             class="musica"
+            autoplay
             controls
             loop
             src="./audio/ToyStory.mp3"
@@ -42,7 +43,7 @@
       </div>
       <!--Ganaste-->
       <section id="you-win">
-        <img src="./disneywin.gif" alt="ganaste" />
+        <img src="./ImgGif/disneywin.gif" alt="ganaste" />
         <div class="buttonReplay">
           <button
             type="buttom"
@@ -55,7 +56,7 @@
       </section>
       <!--Perdiste-->
       <section id="you-lose">
-        <img src="./cry.gif" alt="perdiste" />
+        <img src="./ImgGif/cry.gif" alt="perdiste" />
         <div class="buttonReplay2">
           <button
             type="buttom"
